samples/negative/02_type_mismatch_assign.pas
program n02;
var
  b: boolean;
begin
  b := 123
end.
